# rexglue-sdk

./: README.md
cmake/: rexglue_helpers.cmake
exit1/: CMakeLists.txt  CMakePresets.json  exit1_callbacks.toml  exit1_config.toml  exit1_fixups.toml  exit1_manifest.toml  exit1_vtables.toml
exit1/scripts/: gen_callback_funcs.py  gen_vtable_funcs.py
exit1/src/: exit1_app.h  main.cpp
exit2/: CMakeLists.txt  exit2_callbacks.toml  exit2_config.toml  exit2_fixups.toml  exit2_manifest.toml  exit2_vtables.toml
exit2/scripts/: gen_callback_funcs.py  gen_vtable_funcs.py
exit2/src/: exit2_app.h  main.cpp
exit_common/: CMakeLists.txt
exit_common/include/exit_common/: crash.h  screenshot.h  settings.h  timing.h
exit_common/src/: crash.cpp  screenshot.cpp  settings.cpp  timing.cpp
include/rex/: dbg.h  rex_app.h  thread.h
include/rex/audio/: audio_driver.h  audio_system.h
include/rex/audio/sdl/: sdl_audio_driver.h
include/rex/audio/xma/: context.h  logical_loop_cache.h  loop_scheduler.h  sample_accounting.h
include/rex/codegen/: config.h  function_graph.h  function_node.h
include/rex/input/keyboard/: keyboard_input_driver.h
include/rex/kernel/xam/: private.h
include/rex/system/: xthread.h
include/rex/system/xam/: content_manager.h
metalslugxx/: CMakeLists.txt  CMakePresets.json  metalslugxx_callbacks.toml  metalslugxx_config.toml  metalslugxx_manifest.toml  metalslugxx_vtables.toml
metalslugxx/resources/: metalslugxx.rc.in
metalslugxx/scripts/: build-release.bat  build-rlsdebug.bat  gen_callback_funcs.py  gen_vtable_funcs.py
metalslugxx/src/: main.cpp  metalslugxx_app.h  metalslugxx_config.cpp  metalslugxx_config.h  metalslugxx_crash.cpp  metalslugxx_crash.h  metalslugxx_dlc.cpp  metalslugxx_dlc.h  metalslugxx_hooks.cpp  metalslugxx_screenshot.cpp  metalslugxx_screenshot.h  metalslugxx_settings.cpp  metalslugxx_settings.h  metalslugxx_timing.cpp  metalslugxx_timing.h
resources/templates/codegen/: init_h.inja
src/audio/: audio_system.cpp  xma_context.cpp  xma_decoder.cpp
src/audio/sdl/: sdl_audio_driver.cpp
src/codegen/: codegen_writer.cpp  config.cpp  function_graph.cpp  phase_merge.cpp  phase_register.cpp
src/codegen/builders/: system.cpp
src/core/: cvar.cpp  dbg_posix.cpp  dbg_win.cpp
src/graphics/: command_processor.cpp
src/graphics/d3d12/: command_processor.cpp  texture_cache.cpp
src/graphics/pipeline/shader/: dxbc_translator_fetch.cpp
src/graphics/util/: draw.cpp
src/input/: CMakeLists.txt  input_system.cpp
src/input/keyboard/: keyboard_input_driver.cpp
src/kernel/: CMakeLists.txt
src/kernel/xam/: xam_content.cpp  xam_input.cpp  xam_user.cpp
src/kernel/xboxkrnl/: xboxkrnl_threading.cpp
src/rexglue/commands/: codegen_command.cpp  init_command.cpp
src/system/: xthread.cpp
src/system/xam/: content_manager.cpp
src/ui/: presenter.cpp  rex_app.cpp  window_win.cpp
src/ui/d3d12/: d3d12_presenter.cpp
tests/ppc/asm/: instr_dcbz.s
tests/unit/codegen/: config_test.cpp  template_registry_test.cpp
